--- a/portofolio.html
+++ b/portofolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Portofolio</title>
     <style>
         .navigasi {
             position: sticky;
@@ -69,10 +69,6 @@
             padding: 1px 430px;
             box-shadow: rgb(0,0,0) 0px 2px 6px;
         }
-        .bground {
-            margin: auto;
-            width: fit-content;
-        }
     </style>
 </head>
 
@@ -89,9 +85,7 @@
             </ul>
         </div>
     </nav>
-    <div class="bground">
-        <img src="background.jpg">
-    </div>
+    
 </body>
 
 </html>
