--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
             position: sticky;
             top: 0px;
             height: 80px;
-            background: rgb(109, 191, 103);
+            background: rgb(214, 210, 202);
             color: white;
             font-family: 'Titillium Web', sans-serif;
             box-shadow: rgb(0,0,0) 0px 2px 6px;
@@ -31,7 +31,7 @@
             appearance: auto;
         }
         .navlist li:hover {
-            background: rgb(87, 162, 81);
+            background: rgba(49, 35, 10, 0.692);
         }
         .content {
             font-family: Georgia, 'Times New Roman', Times, serif;
@@ -79,7 +79,7 @@
         </div>
         <div class="navlist">
             <ul>
-                <li><a href="portofolio.html">Portofolio</a></li>
+                <li><a href="index.html">Portofolio</a></li>
                 <li><a href="menu.html">Daftar Menu</a></li>
                 <li><a href="cv.html">Tentang Pemilik</a></li>
             </ul>
