--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             position: sticky;
             top: 0px;
             height: 80px;
-            background: rgb(109, 191, 103);
+            background: rgb(214, 210, 202);
             color: white;
             font-family: 'Titillium Web', sans-serif;
             box-shadow: rgb(0,0,0) 0px 2px 6px;
@@ -31,43 +31,7 @@
             appearance: auto;
         }
         .navlist li:hover {
-            background: rgb(87, 162, 81);
-        }
-        .content {
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            width: 1000px;
-            margin: auto;
-            background-color: rgba(231, 212, 177, 0.692); 
-            padding: 30px;           
-        }
-        .foto {
-            float: left;
-            padding: 20px 30px;
-        }
-        .header {
-            background-color: rgb(46, 39, 2);
-            height: 80px;
-            color: azure;
-            padding: 20px 300px;
-            box-shadow: rgb(0,0,0) 0px 2px 6px;
-        }
-
-        .title {
-            text-align: center;
-            font-size: 15px;
-        }
-        .content li {
-            font-size: 19px;
-        }
-        .elemen {
-            text-align: justify;
-        }
-        .footer {
-            color: azure;
-            background-color: rgb(46, 39, 2);
-            height: 50px;
-            padding: 1px 430px;
-            box-shadow: rgb(0,0,0) 0px 2px 6px;
+            background: rgba(49, 35, 10, 0.692);
         }
         .bground {
             margin: auto;
@@ -83,7 +47,7 @@
         </div>
         <div class="navlist">
             <ul>
-                <li><a href="portofolio.html">Portofolio</a></li>
+                <li><a href="index.html">Portofolio</a></li>
                 <li><a href="menu.html">Daftar Menu</a></li>
                 <li><a href="cv.html">Tentang Pemilik</a></li>
             </ul>
