--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,6 @@
 
         }
         .menu {
-            margin: 0px;
             width: 500px;
             float: left;
             font-family: Arial, Helvetica, sans-serif;
@@ -63,7 +62,8 @@
             box-shadow: black 0px 2px 6px;
         }
         .all {
-            margin-left: 500px;
+            margin: auto;
+            width: fit-content;
         }
     </style>
 </head>
